<resources>
    <string name="app_name">WhatsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="new_group_txt">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web_txt">WhatsApp Web</string>
    <string name="starred_messages_txt">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="video_recorder_txt">Video Recorder</string>
    <string name="voice_call_txt">Voice Call</string>
    <string name="view_contact_txt">View contact</string>
    <string name="media_txt">Media</string>
    <string name="search_txt">Search</string>
    <string name="mute_notifications_txt">Mute notifications</string>
    <string name="wallpaper_txt">Wallpaper</string>
    <string name="more_txt">More</string>
</resources>
